@startuml
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam arrowFontSize 10
skinparam linetype ortho
left to right direction


package network {
    class Request
    class Response
}

package network.data {
    interface ICollManager
    interface IGetterSetter
    class CollectionManager
    class Person
    class PersonFactory
}

package server.ioStorage {

    class FileStorage {
        -fileName: String
        +load(): List<Person>
        +save(persons: Collection<Person>)
        +setFileName(fileName: String)
    }
}

package server.commands {
    interface ICommand
}

package server {
    class ServerMain {
        +main(args: String[])
    }
    class CommandProcessor {
        -commands: Map<String, ICommand>
        +process(request: Request): Response
    }
    class RequestReceiver {
        -socket: DatagramSocket
        +receive(): RequestWrapper
    }
    record RequestWrapper {
        request: Request
        clientAddress: SocketAddress
    }
    class ResponseSender {
        -socket: DatagramSocket
        +send(response: Response, clientAddress: SocketAddress)
    }
}

ServerMain ..> RequestReceiver
ServerMain ..> ResponseSender
ServerMain --> CommandProcessor
ServerMain --> FileStorage
ServerMain --> CollectionManager

RequestReceiver ..> RequestWrapper
RequestWrapper *-- Request

CommandProcessor ..> Request
CommandProcessor ..> Response
CommandProcessor -->  ICommand

FileStorage ..> PersonFactory
FileStorage ..> Person


ICommand ..> ICollManager
ICommand ..> IGetterSetter
ICommand ..> Request
ICommand ..> Response

@enduml